--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -25,7 +25,7 @@
  keywords = {genetic algorithms, geographic information systems (GIS), height field, image processing, terrain generation},
 } 
 
-@article {CGF:CGF1806,
+@article {hnaidi10,
 author = {Hnaidi, Houssam and Guérin, Eric and Akkouche, Samir and Peytavie, Adrien and Galin, Eric},
 title = {Feature based terrain generation using diffusion equation},
 journal = {Computer Graphics Forum},
@@ -41,7 +41,7 @@ keywords = {Terrain modeling, vector graphics, gradient and height field diffusi
 year = {2010},
 }
 
-@article{Musgrave:1989:SRE:74334.74337,
+@article{mustgrave89,
  author = {Musgrave, F. K. and Kolb, C. E. and Mace, R. S.},
  title = {The Synthesis and Rendering of Eroded Fractal Terrains},
  journal = {SIGGRAPH Comput. Graph.},
@@ -60,7 +60,7 @@ year = {2010},
  address = {New York, NY, USA},
 } 
 
-@article{doi:10.1137/1010093,
+@article{mandelbrot68,
 author = {Mandelbrot, B. and Van Ness, J.},
 title = {Fractional Brownian Motions, Fractional Noises and Applications},
 journal = {SIAM Review},
@@ -203,3 +203,59 @@ howpublished = {http://www.visitproteus.com/}
  address = {New York, NY, USA},
  keywords = {botany, database amplification, growth simulation, plant, tree},
 } 
+
+@misc{pittman11,
+  author    = "Jamey Pittman",
+  title     = "The Pac-Man Dossier",
+  year      = "2011",
+  month     = "June",
+  howpublished       = "http://home.comcast.net/~jpittman2/pacman/pacmandossier.html"
+
+}
+@article{bugmann01,
+year={2001},
+issn={0165-0009},
+journal={Climatic Change},
+volume={51},
+number={3-4},
+doi={10.1023/A:1012525626267},
+title={A Review of Forest Gap Models},
+url={http://dx.doi.org/10.1023/A%3A1012525626267},
+publisher={Kluwer Academic Publishers},
+author={Bugmann, Harald},
+pages={259-305},
+language={English}
+}
+@article{takenaka94,
+year={1994},
+issn={0918-9440},
+journal={Journal of Plant Research},
+volume={107},
+number={3},
+doi={10.1007/BF02344260},
+title={A simulation model of tree architecture development based on growth response to local light environment},
+url={http://dx.doi.org/10.1007/BF02344260},
+publisher={Springer-Verlag},
+keywords={Branching; Light environment; Shoot autonomy; Shoot demography; Simulation model; Tree architecture},
+author={Takenaka, Akio},
+pages={321-330},
+language={English}
+}
+
+@inproceedings{weber95,
+ author = {Weber, Jason and Penn, Joseph},
+ title = {Creation and Rendering of Realistic Trees},
+ booktitle = {Proceedings of the 22Nd Annual Conference on Computer Graphics and Interactive Techniques},
+ series = {SIGGRAPH '95},
+ year = {1995},
+ isbn = {0-89791-701-4},
+ pages = {119--128},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/218380.218427},
+ doi = {10.1145/218380.218427},
+ acmid = {218427},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+
+} 
+
